<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.windhoverlabs</groupId>
  <artifactId>yamcs-opcua</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
  	<properties>
		<yamcsVersion>5.8.7</yamcsVersion>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
	</properties>
  
  
  	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.1</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-jdk14</artifactId>
			<version>1.7.1</version>
		</dependency>

		<dependency>
			<groupId>org.yamcs</groupId>
			<artifactId>yamcs-api</artifactId>
			<version>${yamcsVersion}</version>
		</dependency>

		<dependency>
			<groupId>org.yamcs</groupId>
			<artifactId>yamcs-core</artifactId>
			<version>${yamcsVersion}</version>
		</dependency>

		<dependency>
			<groupId>org.yamcs</groupId>
			<artifactId>yamcs-web</artifactId>
			<version>${yamcsVersion}</version>
		</dependency>
		
<!-- https://mvnrepository.com/artifact/org.yamcs/tests -->
<dependency>
    <groupId>org.yamcs</groupId>
    <artifactId>tests</artifactId>
    <version>5.8.7</version>
</dependency>


		<dependency>
			<groupId>org.openmuc</groupId>
			<artifactId>jrxtx</artifactId>
			<version>1.0.1</version>
		</dependency>

		<!-- TEST DEPENDENCIES -->
				<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>			
			<version>5.8.2</version>

			<scope>test</scope>
			
		</dependency>
		
		    <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-api</artifactId>
        <version>5.8.2</version>
        <scope>test</scope>
    </dependency>
		
		
		
		<dependency>
    <groupId>org.junit.jupiter</groupId>
    <artifactId>junit-jupiter-engine</artifactId>
    <version>5.8.2</version>
    <scope>test</scope>
</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-csv -->
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-csv</artifactId>
		    <version>1.10.0</version>
		</dependency>
		
		
		
		<dependency>
    <groupId>org.eclipse.milo</groupId>
    <artifactId>sdk-client</artifactId>
    <version>0.6.13</version>
</dependency>

<dependency>
    <groupId>com.github.stefanbirkner</groupId>
    <artifactId>system-lambda</artifactId>
    <version>1.2.1</version>
</dependency>

	</dependencies>
  
  <build>
	  <plugins>
		  			<plugin>
				<groupId>com.coveo</groupId>
				<artifactId>fmt-maven-plugin</artifactId>
				<version>2.13</version>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<style>google</style>
				</configuration>
			</plugin>
			
						<!-- Code Coverage report generation -->
<!--			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.7</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>generate-code-coverage-report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>-->
			<plugin>
				<groupId>org.eluder.coveralls</groupId>
				<artifactId>coveralls-maven-plugin</artifactId>
				<version>4.3.0</version>
				<configuration>
					<repoToken>${env.COVERALLS_TOKEN}</repoToken>
					<sourceEncoding>UTF-8</sourceEncoding>
				</configuration>
				<dependencies>		
				<dependency>	<!--This is just for coveralls-maven-plugin. It is a known issue:https://github.com/trautonen/coveralls-maven-plugin/issues/141-->
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>2.4.0-b180725.0427</version></dependency></dependencies>
			</plugin>
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<forkCount>1</forkCount>
					<reuseForks>false</reuseForks>
					<systemPropertyVariables>
						<java.util.logging.config.file>
							${project.build.directory}/test-classes/logging.properties
						</java.util.logging.config.file>
					</systemPropertyVariables>
				</configuration>
			</plugin>
			
		

	  </plugins>
  </build>
</project>